--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1561,15 +1561,25 @@ section.lazy-placeholder:after {
 .cid-s07cvoqGET .dropdown-item:hover {
   color: #ffffff !important;
 }
-.cid-s07cvpolp0 {
-  padding-top: 135px;
-  padding-bottom: 60px;
-  background-image: url("../../../assets/images/mbr-1920x1157.jpg");
+.cid-s5fWdLcpi4 {
+  padding-top: 105px;
+  padding-bottom: 0px;
+  background-color: #232323;
 }
-.cid-s07cvpolp0 .mbr-text,
-.cid-s07cvpolp0 .mbr-section-btn {
-  text-align: left;
-  color: #ffffff;
+.cid-s5fWdLcpi4 P {
+  color: #767676;
+}
+.cid-s5fWdLcpi4 H1 {
+  color: #c1c1c1;
+}
+.cid-s5fWigAlLS {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-s5fWigAlLS .mbr-text,
+.cid-s5fWigAlLS blockquote {
+  color: #767676;
 }
 .cid-s07cvr1tzh {
   padding-top: 30px;
@@ -1660,57 +1670,39 @@ section.lazy-placeholder:after {
   text-align: left;
   color: #5b686b;
 }
-.cid-s07lhgdRyz {
-  padding-top: 120px;
+.cid-s5fRPFC7oc {
+  padding-top: 105px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-s5fRPFC7oc P {
+  color: #767676;
+}
+.cid-s5fRPFC7oc H1 {
+  color: #c1c1c1;
+}
+.cid-s5fRvvQiKK {
+  padding-top: 15px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-s5fRvvQiKK .mbr-text,
+.cid-s5fRvvQiKK blockquote {
+  color: #767676;
+}
+.cid-s5fSanRtIX {
+  padding-top: 30px;
   padding-bottom: 60px;
-  background-image: url("../../../assets/images/ppuc-top-view-2000x1125.jpeg");
+  background-color: #ffffff;
 }
-.cid-s07lhgdRyz .testimonials-container {
-  margin: 0 auto;
+.cid-s5fSanRtIX .counter-container {
+  color: #767676;
 }
-.cid-s07lhgdRyz .testimonials-container .testimonials-item {
-  justify-content: center;
-  margin-top: 3rem;
-  -webkit-justify-content: center;
+.cid-s5fSanRtIX .counter-container ul {
+  margin-bottom: 0;
 }
-.cid-s07lhgdRyz .testimonials-container .testimonials-item .user {
-  background: #efefef;
-}
-.cid-s07lhgdRyz .testimonials-container .testimonials-item .user.row {
-  margin: 0;
-}
-.cid-s07lhgdRyz .testimonials-container .testimonials-item .user .user_image {
-  width: 150px;
-  height: 150px;
-  overflow: hidden;
-  margin: 2rem auto 2rem auto;
-}
-.cid-s07lhgdRyz .testimonials-container .testimonials-item .user .user_image img {
-  width: 100%;
-  min-width: 100%;
-  min-height: 100%;
-}
-.cid-s07lhgdRyz .testimonials-container .testimonials-item .user .testimonials-caption {
-  padding: 2rem;
-  padding: 2rem 2rem 2rem 0;
-}
-@media (max-width: 260px) {
-  .cid-s07lhgdRyz .user_image {
-    width: 100% !important;
-    height: auto !important;
-  }
-}
-@media (max-width: 767px) {
-  .cid-s07lhgdRyz .testimonials-caption {
-    padding: 0 2rem 2rem 2rem !important;
-  }
-}
-.cid-s07lhgdRyz .mbr-section-subtitle {
-  color: #ffffff;
-  text-align: center;
-}
-.cid-s07lhgdRyz H2 {
-  color: #ffffff;
+.cid-s5fSanRtIX .counter-container ul li {
+  margin-bottom: 1rem;
 }
 .cid-s07eLeOLjJ .navbar {
   background: #cccccc;
@@ -6425,6 +6417,95 @@ section.lazy-placeholder:after {
 .cid-s5cglNJe9c .mbr-text P {
   text-align: left;
 }
+.cid-s5fY0blOcv {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #cccccc;
+}
+@media (max-width: 767px) {
+  .cid-s5fY0blOcv .content {
+    text-align: center;
+  }
+  .cid-s5fY0blOcv .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+.cid-s5fY0blOcv .map {
+  height: 18.75rem;
+}
+@media (max-width: 767px) {
+  .cid-s5fY0blOcv .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-s5fY0blOcv .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: .05;
+}
+.cid-s5fY0blOcv .footer-lower .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+.cid-s5fY0blOcv .footer-lower .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #fff;
+}
+.cid-s5fY0blOcv .footer-lower .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-s5fY0blOcv .footer-lower .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-s5fY0blOcv .footer-lower .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-s5fY0blOcv .footer-lower .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+.cid-s5fY0blOcv .google-map {
+  height: 25rem;
+  position: relative;
+}
+.cid-s5fY0blOcv .google-map iframe {
+  height: 100%;
+  width: 100%;
+}
+.cid-s5fY0blOcv .google-map [data-state-details] {
+  color: #6b6763;
+  font-family: Montserrat;
+  height: 1.5em;
+  margin-top: -0.75em;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100%;
+}
+.cid-s5fY0blOcv .google-map[data-state] {
+  background: #e9e5dc;
+}
+.cid-s5fY0blOcv .google-map[data-state="loading"] [data-state-details] {
+  display: none;
+}
+.cid-s5fY0blOcv P {
+  text-align: left;
+  color: #5b686b;
+}
 .cid-s5cl4PDiWC .navbar {
   background: #cccccc;
   transition: none;
@@ -6855,4 +6936,93 @@ section.lazy-placeholder:after {
 }
 .cid-s5cl4RBXLI .mbr-text P {
   text-align: left;
+}
+.cid-s5fY4WUJuM {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #cccccc;
+}
+@media (max-width: 767px) {
+  .cid-s5fY4WUJuM .content {
+    text-align: center;
+  }
+  .cid-s5fY4WUJuM .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+.cid-s5fY4WUJuM .map {
+  height: 18.75rem;
+}
+@media (max-width: 767px) {
+  .cid-s5fY4WUJuM .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-s5fY4WUJuM .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: .05;
+}
+.cid-s5fY4WUJuM .footer-lower .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+.cid-s5fY4WUJuM .footer-lower .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #fff;
+}
+.cid-s5fY4WUJuM .footer-lower .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-s5fY4WUJuM .footer-lower .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-s5fY4WUJuM .footer-lower .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-s5fY4WUJuM .footer-lower .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+.cid-s5fY4WUJuM .google-map {
+  height: 25rem;
+  position: relative;
+}
+.cid-s5fY4WUJuM .google-map iframe {
+  height: 100%;
+  width: 100%;
+}
+.cid-s5fY4WUJuM .google-map [data-state-details] {
+  color: #6b6763;
+  font-family: Montserrat;
+  height: 1.5em;
+  margin-top: -0.75em;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100%;
+}
+.cid-s5fY4WUJuM .google-map[data-state] {
+  background: #e9e5dc;
+}
+.cid-s5fY4WUJuM .google-map[data-state="loading"] [data-state-details] {
+  display: none;
+}
+.cid-s5fY4WUJuM P {
+  text-align: left;
+  color: #5b686b;
 }
