create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1561,16 +1561,16 @@ section.lazy-placeholder:after {
 .cid-s07cvoqGET .dropdown-item:hover {
   color: #ffffff !important;
 }
-.cid-s5fWdLcpi4 {
+.cid-s5g5VWwYuX {
   padding-top: 105px;
   padding-bottom: 0px;
   background-color: #232323;
 }
-.cid-s5fWdLcpi4 P {
+.cid-s5g5VWwYuX P {
   color: #767676;
 }
-.cid-s5fWdLcpi4 H1 {
-  color: #c1c1c1;
+.cid-s5g5VWwYuX H1 {
+  color: #cccccc;
 }
 .cid-s5fWigAlLS {
   padding-top: 60px;
@@ -1670,16 +1670,16 @@ section.lazy-placeholder:after {
   text-align: left;
   color: #5b686b;
 }
-.cid-s5fRPFC7oc {
+.cid-s5g61Ygjgz {
   padding-top: 105px;
   padding-bottom: 0px;
   background-color: #232323;
 }
-.cid-s5fRPFC7oc P {
+.cid-s5g61Ygjgz P {
   color: #767676;
 }
-.cid-s5fRPFC7oc H1 {
-  color: #c1c1c1;
+.cid-s5g61Ygjgz H1 {
+  color: #cccccc;
 }
 .cid-s5fRvvQiKK {
   padding-top: 15px;
@@ -2200,16 +2200,16 @@ section.lazy-placeholder:after {
   text-align: left;
   color: #5b686b;
 }
-.cid-s5c2vELCXq {
+.cid-s5g5jiqEYt {
   padding-top: 105px;
   padding-bottom: 0px;
   background-color: #232323;
 }
-.cid-s5c2vELCXq P {
+.cid-s5g5jiqEYt P {
   color: #767676;
 }
-.cid-s5c2vELCXq H1 {
-  color: #c1c1c1;
+.cid-s5g5jiqEYt H1 {
+  color: #cccccc;
 }
 .cid-s5c2ApyJ99 .modal-body .close {
   background: #1b1b1b;
@@ -2957,16 +2957,16 @@ section.lazy-placeholder:after {
   text-align: left;
   color: #5b686b;
 }
-.cid-s5c8P35jnE {
+.cid-s5g5qFCZQY {
   padding-top: 105px;
   padding-bottom: 0px;
   background-color: #232323;
 }
-.cid-s5c8P35jnE P {
+.cid-s5g5qFCZQY P {
   color: #767676;
 }
-.cid-s5c8P35jnE H1 {
-  color: #c1c1c1;
+.cid-s5g5qFCZQY H1 {
+  color: #cccccc;
 }
 .cid-s5c8NqOr79 .modal-body .close {
   background: #1b1b1b;
@@ -3714,16 +3714,16 @@ section.lazy-placeholder:after {
   text-align: left;
   color: #5b686b;
 }
-.cid-s5cb0fz2LU {
+.cid-s5g5yjWRuN {
   padding-top: 105px;
   padding-bottom: 0px;
   background-color: #232323;
 }
-.cid-s5cb0fz2LU P {
+.cid-s5g5yjWRuN P {
   color: #767676;
 }
-.cid-s5cb0fz2LU H1 {
-  color: #c1c1c1;
+.cid-s5g5yjWRuN H1 {
+  color: #cccccc;
 }
 .cid-s5cb2teTlW .modal-body .close {
   background: #1b1b1b;
@@ -4471,16 +4471,16 @@ section.lazy-placeholder:after {
   text-align: left;
   color: #5b686b;
 }
-.cid-s5ceGVt71K {
+.cid-s5g5Ky7MMl {
   padding-top: 105px;
   padding-bottom: 0px;
   background-color: #232323;
 }
-.cid-s5ceGVt71K P {
+.cid-s5g5Ky7MMl P {
   color: #767676;
 }
-.cid-s5ceGVt71K H1 {
-  color: #c1c1c1;
+.cid-s5g5Ky7MMl H1 {
+  color: #cccccc;
 }
 .cid-s5bBNYLn3r .navbar {
   background: #cccccc;
@@ -5228,17 +5228,6 @@ section.lazy-placeholder:after {
   text-align: left;
   color: #5b686b;
 }
-.cid-s5c0PUkqcn {
-  padding-top: 105px;
-  padding-bottom: 0px;
-  background-color: #232323;
-}
-.cid-s5c0PUkqcn P {
-  color: #767676;
-}
-.cid-s5c0PUkqcn H1 {
-  color: #c1c1c1;
-}
 .cid-s5bJgczdcc .navbar {
   background: #cccccc;
   transition: none;
@@ -5645,6 +5634,17 @@ section.lazy-placeholder:after {
 .cid-s5bJgczdcc .nav-link:hover,
 .cid-s5bJgczdcc .dropdown-item:hover {
   color: #ffffff !important;
+}
+.cid-s5g5Q16jRl {
+  padding-top: 105px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-s5g5Q16jRl P {
+  color: #767676;
+}
+.cid-s5g5Q16jRl H1 {
+  color: #cccccc;
 }
 .cid-s5bJgdP14v .modal-body .close {
   background: #1b1b1b;
@@ -6393,17 +6393,16 @@ section.lazy-placeholder:after {
 .cid-s5bBNYLn3r .dropdown-item:hover {
   color: #ffffff !important;
 }
-.cid-s5cgk4MHVF {
+.cid-s5g4j8rvMq {
   padding-top: 120px;
   padding-bottom: 0px;
-  background-color: #465052;
+  background-color: #232323;
 }
-.cid-s5cgk4MHVF .mbr-section-subtitle {
+.cid-s5g4j8rvMq P {
   color: #767676;
 }
-.cid-s5cgk4MHVF H2 {
+.cid-s5g4j8rvMq H1 {
   color: #cccccc;
-  text-align: center;
 }
 .cid-s5cglNJe9c {
   padding-top: 60px;
@@ -6913,17 +6912,16 @@ section.lazy-placeholder:after {
 .cid-s5cl4PDiWC .dropdown-item:hover {
   color: #ffffff !important;
 }
-.cid-s5cl4R3Ew3 {
+.cid-s5g4X6r3qF {
   padding-top: 120px;
   padding-bottom: 0px;
-  background-color: #465052;
+  background-color: #232323;
 }
-.cid-s5cl4R3Ew3 .mbr-section-subtitle {
+.cid-s5g4X6r3qF P {
   color: #767676;
 }
-.cid-s5cl4R3Ew3 H2 {
+.cid-s5g4X6r3qF H1 {
   color: #cccccc;
-  text-align: center;
 }
 .cid-s5cl4RBXLI {
   padding-top: 60px;
